--- a/MyFlatWPF/MainWindow.xaml
+++ b/MyFlatWPF/MainWindow.xaml
@@ -301,7 +301,8 @@
         <TextBlock x:Name="tbRandomPhrase"
                    Grid.Row="1"
                    Grid.Column="1"
-                   Text="{Binding RandomPhrase, Source={StaticResource MainWindowViewModel}}"
+                   Text="{Binding RandomPhrase, Source={StaticResource MainWindowViewModel},
+                          UpdateSourceTrigger=PropertyChanged}"
                    Margin="0 0 10 0"
                    HorizontalAlignment="Right"
                    FontSize="12"
