--- a/MyFlatWPF/View/ManagementWindow.xaml
+++ b/MyFlatWPF/View/ManagementWindow.xaml
@@ -187,7 +187,7 @@
                 </Border>
 
                 <Border BorderThickness="0 0 0 0">
-                    <Button x:Name="btnProjects"
+                    <Button x:Name="btnProjectsEdit"
                         Content="Projects"
                         Margin="0 10 0 0"
                         Style="{StaticResource ButtonStyle}"
@@ -197,7 +197,7 @@
                 </Border>
 
                 <Border BorderThickness="0 0 0 0">
-                    <Button x:Name="btnServices"
+                    <Button x:Name="btnServicesEdit"
                         Content="Services"
                         Margin="0 10 0 0"
                         Style="{StaticResource ButtonStyle}"
@@ -207,7 +207,7 @@
                 </Border>
 
                 <Border BorderThickness="0 0 0 0">
-                    <Button x:Name="btnBlog"
+                    <Button x:Name="btnBlogEdit"
                         Content="Blog"
                         Margin="0 10 0 0"
                         Style="{StaticResource ButtonStyle}"
@@ -217,7 +217,7 @@
                 </Border>
 
                 <Border BorderThickness="0 0 0 0">
-                    <Button x:Name="btnContacts"
+                    <Button x:Name="btnContactsEdit"
                         Content="Contacts"
                         Margin="0 10 0 0"
                         Style="{StaticResource ButtonStyle}"
