--- a/MyFlatWPF/View/ManagementView/ProjectsEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/ProjectsEditView.xaml
@@ -43,15 +43,43 @@
                 </Setter>
             </Style>
 
+            <Style x:Key="HoverButtonCircleStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontWeight" Value="DemiBold"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Width" Value="20"/>
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="10"
+                                    Height="20"
+                                    Padding="0 0 0 2"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="#0082ff">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="FontSize" Value="10"/>
                 <Setter Property="Cursor" Value="Hand"/>
                 <Setter Property="Height" Value="20"/>
                 <Setter Property="Padding" Value="5 0 5 0"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+                <Setter Property="BorderThickness" Value="0.75"/>
                 <Setter Property="Template">
                     <Setter.Value>
-                        <ControlTemplate TargetType="Button">
-                            <Border CornerRadius="3"
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border x:Name="border"
+                                    CornerRadius="3"
                                     Height="20"
                                     Padding="5 0 5 0"
                                     HorizontalAlignment="Center"
@@ -59,6 +87,33 @@
                                     BorderThickness="1"
                                     BorderBrush="Black"
                                     Background="DeepSkyBlue">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="ButtonHoverStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="10"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="Padding" Value="5 0 5 0"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border x:Name="border"
+                                    CornerRadius="3"
+                                    Height="20"
+                                    Padding="5 0 5 0"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="#0082ff">
                                 <ContentPresenter HorizontalAlignment="Center"
                                                   VerticalAlignment="Center"/>
                             </Border>
@@ -134,7 +189,7 @@
         </Button>
 
         <Border Grid.Row="2"
-                        Grid.ColumnSpan="2"
+                Margin="0 5 0 0"
                         Style="{StaticResource BorderStyle}"></Border>
 
         <TextBlock x:Name="tbEditProject"
@@ -146,7 +201,7 @@
 
         <WrapPanel x:Name="wpProjects"
                    Grid.Row="4"
-                   Margin="0 10 0 0">
+                   Margin="0 0 0 0">
         </WrapPanel>
 
 
