--- a/MyFlatWPF/View/ManagementView/AddProjectView.xaml
+++ b/MyFlatWPF/View/ManagementView/AddProjectView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.ProjectEditView"
+﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.AddProjectView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
              d:DesignHeight="800" 
              d:DesignWidth="600">
 
-    <Grid x:Name="gProjectEdit"
+    <Grid x:Name="gAddProject"
           Margin="10 0 10 0">
 
         <Grid.Resources>
@@ -119,7 +119,7 @@
             <RowDefinition Height="0.8*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.8*"/>
-            <RowDefinition Height="4*"/>
+            <RowDefinition Height="4.2*"/>
             <RowDefinition Height="0.8*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="3*"/>
@@ -131,7 +131,7 @@
         </Grid.ColumnDefinitions>
 
         <TextBlock x:Name="tblHeader"
-                   Text="Project Edit"
+                   Text="Add Project"
                    FontSize="20"
                    Margin="0 5 0 5"
                    HorizontalAlignment="Left">
@@ -165,15 +165,20 @@
                    HorizontalAlignment="Left">
         </TextBlock>
 
-        <Image x:Name="iProjectImage"
+        <Border x:Name="bImage"
                Grid.Row="5"
                Width="190"
                Height="150"
                Margin="1"
+                Background="LightGray"
+                HorizontalAlignment="Left">
+            <Image x:Name="iProjectImage"
+               Width="190"
+               Height="150"
                Stretch="Fill"
                HorizontalAlignment="Left">
-        </Image>
-
+            </Image>
+        </Border>
 
         <Button x:Name="btnChooseImage"
                 Grid.Row="6"
@@ -211,14 +216,14 @@
                  HorizontalAlignment="Left">
         </TextBox>
 
-        <Button x:Name="btnChange"
+        <Button x:Name="btnAddProject"
                 Grid.Row="9"
-                Content="Change"
+                Content="Add"
                 Style="{Binding Source={StaticResource ButtonStyle}}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Margin="1 5 0 0"
-                ToolTip="Change project">
+                ToolTip="Add project">
         </Button>
 
         <Button x:Name="btnCancel"
@@ -227,7 +232,7 @@
                 Style="{Binding Source={StaticResource ButtonStyle}}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Margin="55 5 0 0"
+                Margin="42 5 0 0"
                 ToolTip="Cancel">
         </Button>
 
