--- a/MyFlatWPF/View/ManagementView/HomeEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/HomeEditView.xaml
@@ -43,6 +43,31 @@
                 </Setter>
             </Style>
 
+            <Style x:Key="HoverButtonCircleStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontWeight" Value="DemiBold"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Width" Value="20"/>
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="10"
+                                    Height="20"
+                                    Padding="0 0 0 2"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="#0082ff">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="FontSize" Value="10"/>
                 <Setter Property="Cursor" Value="Hand"/>
@@ -59,6 +84,33 @@
                                     BorderThickness="1"
                                     BorderBrush="Black"
                                     Background="DeepSkyBlue">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="ButtonHoverStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="10"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="Padding" Value="5 0 5 0"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border x:Name="border"
+                                    CornerRadius="3"
+                                    Height="20"
+                                    Padding="5 0 5 0"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="#0082ff">
                                 <ContentPresenter HorizontalAlignment="Center"
                                                   VerticalAlignment="Center"/>
                             </Border>
@@ -195,6 +247,8 @@
                                 Margin="10 0 0 0"
                                 FontWeight="DemiBold"
                                 ToolTip="Add phrase"
+                                MouseEnter="BtnCircle_mouseEnter"
+                                MouseLeave="BtnCircle_mouseLeave"
                                 Style="{StaticResource ButtonCircleStyle}"
                                 CommandParameter="{Binding Text, ElementName=tbInputPhrase}">
                 </Button>
@@ -241,7 +295,9 @@
                                 HorizontalAlignment="Right"
                                 Margin="0 5 1 0"
                                 ToolTip="Change text"
-                                Style="{StaticResource ButtonStyle}">
+                                Style="{StaticResource ButtonStyle}"
+                                MouseEnter="Btn_mouseEnter"
+                                MouseLeave="Btn_mouseLeave">
                 </Button>
             </StackPanel>
 
@@ -285,15 +341,19 @@
                                 Content="Choose image"
                                 ToolTip="Choose image"
                                 Style="{StaticResource ButtonStyle}"
-                        VerticalContentAlignment="Top"
-                        Command="{Binding}">
+                                VerticalContentAlignment="Top"
+                                Command="{Binding}"
+                                MouseEnter="Btn_mouseEnter"
+                                MouseLeave="Btn_mouseLeave">
                 </Button>
 
                 <Button x:Name="btnSaveNewImage"
                                 Content="Save"
                                 Margin="63 0 0 0"
                                 ToolTip="Save new image"
-                                Style="{StaticResource ButtonStyle}">
+                                Style="{StaticResource ButtonStyle}"
+                                MouseEnter="Btn_mouseEnter"
+                                MouseLeave="Btn_mouseLeave">
                 </Button>
 
             </StackPanel>
@@ -332,7 +392,9 @@
                                 Margin="10 1 2 0"
                                 HorizontalAlignment="Left"
                                 ToolTip="Change header text"
-                                Style="{StaticResource ButtonStyle}">
+                                Style="{StaticResource ButtonStyle}"
+                                MouseEnter="Btn_mouseEnter"
+                                MouseLeave="Btn_mouseLeave">
                 </Button>
                 
             </StackPanel>
@@ -363,7 +425,9 @@
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Top"
                                 ToolTip="Change bottom content"
-                                Style="{StaticResource ButtonStyle}">
+                                Style="{StaticResource ButtonStyle}"
+                                MouseEnter="Btn_mouseEnter"
+                                MouseLeave="Btn_mouseLeave">
                 </Button>
                 
             </StackPanel>
