--- a/MyFlatWPF/View/ManagementView/BlogView/AddPostView.xaml
+++ b/MyFlatWPF/View/ManagementView/BlogView/AddPostView.xaml
@@ -170,7 +170,7 @@
                Margin="1"
                BorderThickness="0.75"
                 BorderBrush="LightGray"
-                Background="Transparent"
+                Background="White"
                 HorizontalAlignment="Left">
             <Image x:Name="iPostImage"
                Width="190"
