--- a/MyFlatWPF/View/ManagementView/ContactsView/ContastsEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/ContactsView/ContastsEditView.xaml
@@ -186,7 +186,7 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock x:Name="tbAddHeader"
+        <TextBlock x:Name="tblHeader"
                    Text="Changeable fields on the contacts page"
                    FontSize="20"
                    Margin="0 5 0 5">
@@ -295,11 +295,12 @@
                    Margin="0 5 0 5">
         </TextBlock>
 
-        <WrapPanel x:Name="wpContacts"
+        <StackPanel x:Name="spSocialLinks"
                    Grid.Row="15"
-                   Margin="0 0 0 0">
-        </WrapPanel>
-
+                   Orientation="Vertical"
+                   Margin="0 10 0 10"
+                   HorizontalAlignment="Left">
+        </StackPanel>
 
     </Grid>
 </UserControl>
