--- a/MyFlatWPF/View/ManagementView/ContactsView/ContactsEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/ContactsView/ContactsEditView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.ContactsView.ContastsEditView"
+﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.ContactsView.ContactsEditView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
