--- a/MyFlatWPF/View/ManagementView/ContactsView/LinkEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/ContactsView/LinkEditView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.ContactsView.AddLinkView"
+﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.ContactsView.LinkEditView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -129,7 +129,7 @@
         </Grid.ColumnDefinitions>
 
         <TextBlock x:Name="tblHeader"
-                   Text="Add Link"
+                   Text="Change Link"
                    FontSize="20"
                    Margin="0 5 0 5"
                    HorizontalAlignment="Left">
@@ -197,14 +197,14 @@
                  HorizontalAlignment="Left">
         </TextBox>
 
-        <Button x:Name="btnAddLink"
+        <Button x:Name="btnEditLink"
                 Grid.Row="7"
-                Content="Add"
+                Content="Change"
                 Style="{Binding Source={StaticResource ButtonStyle}}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Margin="1 5 0 0"
-                ToolTip="Add link">
+                ToolTip="Change link">
         </Button>
 
         <Button x:Name="btnCancel"
@@ -213,7 +213,7 @@
                 Style="{Binding Source={StaticResource ButtonStyle}}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Margin="42 5 0 0"
+                Margin="55 5 0 0"
                 ToolTip="Cancel">
         </Button>
 
