--- a/MyFlatWPF/View/ManagementView/UsersView/AllUsersView.xaml
+++ b/MyFlatWPF/View/ManagementView/UsersView/AllUsersView.xaml
@@ -213,7 +213,8 @@
 
         <StackPanel x:Name="spUsers"
                    Grid.Row="5"
-                   Margin="0 0 0 0">
+                   Margin="0 0 0 0"
+                   Orientation="Vertical">
         </StackPanel>
 
 
