--- a/MyFlatWPF/View/ManagementView/UsersView/UserEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/UsersView/UserEditView.xaml
@@ -4,6 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MyFlatWPF.View.ManagementView.UsersView"
+             xmlns:viewModel="clr-namespace:MyFlatWPF.ViewModel.Management"
+             xmlns:help="clr-namespace:MyFlatWPF.HelpMethods"
              mc:Ignorable="d" 
              d:DesignHeight="800" 
              d:DesignWidth="600">
@@ -12,6 +14,15 @@
           Margin="10 0 10 0">
 
         <Grid.Resources>
+
+            <help:MyMultiValueConverter x:Key="MultiValueConverter"/>
+
+            <Style x:Key="TextBlockHeaderStyle" TargetType="TextBlock">
+                <Setter Property="FontSize" Value="16"></Setter>
+                <Setter Property="Background" Value="LightGray"></Setter>
+                <Setter Property="Height" Value="25"></Setter>
+                <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+            </Style>
 
             <Style x:Key="BorderStyle" TargetType="Border">
                 <Setter Property="Background" Value="LightSkyBlue"></Setter>
@@ -110,15 +121,20 @@
                 </Setter>
             </Style>
 
+            <Style x:Key="ComboBoxStyle" TargetType="{x:Type ComboBox}">
+                <Setter Property="Background" Value="White"></Setter>
+            </Style>
+
+            <Style x:Key="ComboBoxItemStyle" TargetType="{x:Type ComboBoxItem}">
+                <Setter Property="Background" Value="White">
+                </Setter>
+            </Style>
+
         </Grid.Resources>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="0.6*"/>
             <RowDefinition Height="0.3*"/>
-            <RowDefinition Height="0.6*"/>
-            <RowDefinition Height="0.7*"/>
-            <RowDefinition Height="0.6*"/>
-            <RowDefinition Height="0.7*"/>
             <RowDefinition Height="0.6*"/>
             <RowDefinition Height="0.7*"/>
             <RowDefinition Height="0.6*"/>
@@ -137,8 +153,129 @@
         <Border Grid.Row="1"
                 Margin="0 5 0 0"
                         Style="{StaticResource BorderStyle}"></Border>
-        
-        
+
+        <TextBlock x:Name="tblUserNameHeader"
+                   Grid.Row="2"
+                   Text="UserName"
+                   Width="200"
+                   Padding="60 0 0 0"
+                   Style="{Binding Source={StaticResource TextBlockHeaderStyle}}">
+        </TextBlock>
+
+        <TextBlock x:Name="tblEmailHeader"
+                   Grid.Row="2"
+                   Text="Email"
+                   Width="200"
+                   Padding="80 0 0 0"
+                   Margin="200 0 0 0"
+                   Style="{Binding Source={StaticResource TextBlockHeaderStyle}}">
+        </TextBlock>
+
+        <TextBlock x:Name="tblRolesHeader"
+                   Grid.Row="2"
+                   Text="Role"
+                   FontSize="16"
+                   Width="100"
+                   Height="25"
+                   Background="LightGray"
+                   Margin="400 0 0 0"
+                   Padding="35 0 0 0"
+                   HorizontalAlignment="Left">
+        </TextBlock>
+
+        <TextBlock x:Name="tblId"
+                   Grid.Row="3"
+                   Visibility="Collapsed">
+        </TextBlock>
+
+        <TextBlock x:Name="tblUserName"
+                   Grid.Row="3"
+                   FontSize="12"
+                   Width="200"
+                   Height="25"
+                   TextWrapping="Wrap"
+                   HorizontalAlignment="Left">
+        </TextBlock>
+
+        <TextBlock x:Name="tblEmail"
+                   Grid.Row="3"
+                   FontSize="12"
+                   Width="200"
+                   Height="25"
+                   TextWrapping="Wrap"
+                   Margin="200 0 0 0"
+                   HorizontalAlignment="Left">
+        </TextBlock>
+
+        <TextBlock x:Name="tblRoles"
+                   Grid.Row="3"
+                   FontSize="12"
+                   Width="100"
+                   Height="25"
+                   Margin="400 0 0 0"
+                   TextWrapping="Wrap"
+                   HorizontalAlignment="Left">
+        </TextBlock>
+
+        <Border x:Name="bRoles" 
+                        Grid.Row="4"
+                        Width="150"
+                        Height="25"
+                        CornerRadius="3"
+                        BorderThickness="1"
+                        BorderBrush="Black"
+                        Background="White"
+                        Cursor="Hand"
+                        HorizontalAlignment="Left">
+            <ComboBox x:Name="cbRoles"
+                          ToolTip="Choose Service"
+                          FontSize="12"
+                          VerticalAlignment="Center"
+                          Style="{StaticResource ComboBoxStyle}"
+                          BorderBrush="Transparent"
+                          BorderThickness="0">
+            </ComboBox>
+        </Border>
+
+        <Button x:Name="btnAddRole"
+                Grid.Row="4"
+                Content="Add"
+                Margin="160 0 0 0"
+                Style="{Binding Source={StaticResource ButtonStyle}}"
+                HorizontalAlignment="Left"
+                ToolTip="Add role">
+            <Button.CommandParameter>
+                <MultiBinding Converter="{StaticResource MultiValueConverter}">
+                    <Binding ElementName="tblId"/>
+                    <Binding Path="SelectedItem.Content" ElementName="cbRoles"/>
+                    <Binding ElementName="tbMessage"/>
+                </MultiBinding>
+            </Button.CommandParameter>
+        </Button>
+
+        <Button x:Name="btnDeleteRole"
+                Grid.Row="4"
+                Content="Delete"
+                Margin="200 0 0 0"
+                Style="{Binding Source={StaticResource ButtonStyle}}"
+                HorizontalAlignment="Left"
+                ToolTip="Delete role">
+            <Button.CommandParameter>
+                <MultiBinding Converter="{StaticResource MultiValueConverter}">
+                    <Binding ElementName="tblId"/>
+                    <Binding ElementName="cbRoles"/>
+                    <Binding ElementName="tbMessage"/>
+                </MultiBinding>
+            </Button.CommandParameter>
+        </Button>
+
+        <TextBlock x:Name="tblMessage"
+                   Grid.Row="4"
+                   FontSize="10"
+                   Foreground="Red"
+                   Margin="250 0 0 0"
+                   HorizontalAlignment="Left">
+        </TextBlock>
 
     </Grid>
 </UserControl>
