--- a/MyFlatWPF/View/ManagementView/UsersView/UserEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/UsersView/UserEditView.xaml
@@ -138,7 +138,8 @@
             <RowDefinition Height="0.6*"/>
             <RowDefinition Height="0.7*"/>
             <RowDefinition Height="0.6*"/>
-            <RowDefinition Height="10*"/>
+            <RowDefinition Height="0.6*"/>
+            <RowDefinition Height="9*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -276,6 +277,14 @@
                    Margin="250 0 0 0"
                    HorizontalAlignment="Left">
         </TextBlock>
+
+        <Button x:Name="btnBackToUsers"
+                Grid.Row="5"
+                Content="Back"
+                Style="{Binding Source={StaticResource ButtonStyle}}"
+                HorizontalAlignment="Left"
+                ToolTip="To list users">
+        </Button>
 
     </Grid>
 </UserControl>
