--- a/MyFlatWPF/View/ManagementView/UsersView/UserEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/UsersView/UserEditView.xaml
@@ -158,17 +158,17 @@
         <TextBlock x:Name="tblUserNameHeader"
                    Grid.Row="2"
                    Text="UserName"
-                   Width="200"
-                   Padding="60 0 0 0"
+                   Width="150"
+                   Padding="40 3 0 0"
                    Style="{Binding Source={StaticResource TextBlockHeaderStyle}}">
         </TextBlock>
 
         <TextBlock x:Name="tblEmailHeader"
                    Grid.Row="2"
                    Text="Email"
-                   Width="200"
-                   Padding="80 0 0 0"
-                   Margin="200 0 0 0"
+                   Width="150"
+                   Margin="150 0 0 0"
+                   Padding="50 3 0 0"
                    Style="{Binding Source={StaticResource TextBlockHeaderStyle}}">
         </TextBlock>
 
@@ -176,24 +176,20 @@
                    Grid.Row="2"
                    Text="Role"
                    FontSize="16"
-                   Width="100"
+                   Width="80"
                    Height="25"
                    Background="LightGray"
-                   Margin="400 0 0 0"
-                   Padding="35 0 0 0"
+                   Margin="300 0 0 0"
+                   Padding="5 3 0 0"
                    HorizontalAlignment="Left">
-        </TextBlock>
-
-        <TextBlock x:Name="tblId"
-                   Grid.Row="3"
-                   Visibility="Collapsed">
         </TextBlock>
 
         <TextBlock x:Name="tblUserName"
                    Grid.Row="3"
                    FontSize="12"
-                   Width="200"
-                   Height="25"
+                   Width="150"
+                   Height="30"
+                   Padding="5"
                    TextWrapping="Wrap"
                    HorizontalAlignment="Left">
         </TextBlock>
@@ -201,10 +197,11 @@
         <TextBlock x:Name="tblEmail"
                    Grid.Row="3"
                    FontSize="12"
-                   Width="200"
-                   Height="25"
+                   Width="150"
+                   Height="30"
+                   Padding="5"
                    TextWrapping="Wrap"
-                   Margin="200 0 0 0"
+                   Margin="150 0 0 0"
                    HorizontalAlignment="Left">
         </TextBlock>
 
@@ -212,8 +209,9 @@
                    Grid.Row="3"
                    FontSize="12"
                    Width="100"
-                   Height="25"
-                   Margin="400 0 0 0"
+                   Height="30"
+                   Padding="5"
+                   Margin="300 0 0 0"
                    TextWrapping="Wrap"
                    HorizontalAlignment="Left">
         </TextBlock>
@@ -247,9 +245,8 @@
                 ToolTip="Add role">
             <Button.CommandParameter>
                 <MultiBinding Converter="{StaticResource MultiValueConverter}">
-                    <Binding ElementName="tblId"/>
-                    <Binding Path="SelectedItem.Content" ElementName="cbRoles"/>
-                    <Binding ElementName="tbMessage"/>
+                    <Binding ElementName="cbRoles"/>
+                    <Binding ElementName="tblMessage"/>
                 </MultiBinding>
             </Button.CommandParameter>
         </Button>
@@ -263,18 +260,18 @@
                 ToolTip="Delete role">
             <Button.CommandParameter>
                 <MultiBinding Converter="{StaticResource MultiValueConverter}">
-                    <Binding ElementName="tblId"/>
                     <Binding ElementName="cbRoles"/>
-                    <Binding ElementName="tbMessage"/>
+                    <Binding ElementName="tblMessage"/>
                 </MultiBinding>
             </Button.CommandParameter>
         </Button>
 
         <TextBlock x:Name="tblMessage"
                    Grid.Row="4"
-                   FontSize="10"
+                   FontSize="12"
                    Foreground="Red"
                    Margin="250 0 0 0"
+                   Padding="0 3 0 0"
                    HorizontalAlignment="Left">
         </TextBlock>
 
