--- a/MyFlatWPF/View/ManagementView/RolesView/AllRolesView.xaml
+++ b/MyFlatWPF/View/ManagementView/RolesView/AllRolesView.xaml
@@ -1,32 +1,70 @@
-﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.UsersView.UserEditView"
+﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.RolesView.AllRolesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MyFlatWPF.View.ManagementView.UsersView"
-             xmlns:viewModel="clr-namespace:MyFlatWPF.ViewModel.Management"
-             xmlns:help="clr-namespace:MyFlatWPF.HelpMethods"
+             xmlns:local="clr-namespace:MyFlatWPF.View.ManagementView.RolesView"
              mc:Ignorable="d" 
              d:DesignHeight="800" 
              d:DesignWidth="600">
-
-    <Grid x:Name="gUserEdit"
+    <Grid x:Name="gAllRoles"
           Margin="10 0 10 0">
 
         <Grid.Resources>
 
-            <help:MyMultiValueConverter x:Key="MultiValueConverter"/>
-
-            <Style x:Key="TextBlockHeaderStyle" TargetType="TextBlock">
-                <Setter Property="FontSize" Value="16"></Setter>
-                <Setter Property="Background" Value="LightGray"></Setter>
-                <Setter Property="Height" Value="25"></Setter>
-                <Setter Property="HorizontalAlignment" Value="Left"></Setter>
-            </Style>
-
             <Style x:Key="BorderStyle" TargetType="Border">
                 <Setter Property="Background" Value="LightSkyBlue"></Setter>
                 <Setter Property="Height" Value="0.5"></Setter>
+            </Style>
+
+            <Style x:Key="ButtonCircleStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontWeight" Value="DemiBold"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Width" Value="20"/>
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="10"
+                                    Height="20"
+                                    Padding="0 0 0 2"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="DeepSkyBlue">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="HoverButtonCircleStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontWeight" Value="DemiBold"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Width" Value="20"/>
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="10"
+                                    Height="20"
+                                    Padding="0 0 0 2"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="#0082ff">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
             </Style>
 
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
@@ -121,32 +159,23 @@
                 </Setter>
             </Style>
 
-            <Style x:Key="ComboBoxStyle" TargetType="{x:Type ComboBox}">
-                <Setter Property="Background" Value="White"></Setter>
-            </Style>
-
-            <Style x:Key="ComboBoxItemStyle" TargetType="{x:Type ComboBoxItem}">
-                <Setter Property="Background" Value="White">
-                </Setter>
-            </Style>
-
         </Grid.Resources>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="0.6*"/>
             <RowDefinition Height="0.3*"/>
-            <RowDefinition Height="0.6*"/>
             <RowDefinition Height="0.7*"/>
+            <RowDefinition Height="0.5*"/>
             <RowDefinition Height="0.6*"/>
             <RowDefinition Height="0.6*"/>
-            <RowDefinition Height="9*"/>
+            <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock x:Name="tblEditUser"
-                   Text="Edit User"
+        <TextBlock x:Name="tblAllRoles"
+                   Text="Roles"
                    FontSize="20"
                    Margin="0 5 0 5">
         </TextBlock>
@@ -155,139 +184,39 @@
                 Margin="0 5 0 0"
                         Style="{StaticResource BorderStyle}"></Border>
 
-        <TextBlock x:Name="tblUserNameHeader"
+        <TextBlock x:Name="tblAddRole"
                    Grid.Row="2"
-                   Text="UserName"
-                   Width="150"
-                   Margin="0 10 0 0"
-                   Padding="40 3 0 0"
-                   Style="{Binding Source={StaticResource TextBlockHeaderStyle}}">
-        </TextBlock>
-
-        <TextBlock x:Name="tblEmailHeader"
-                   Grid.Row="2"
-                   Text="Email"
-                   Width="150"
-                   Margin="150 10 0 0"
-                   Padding="50 3 0 0"
-                   Style="{Binding Source={StaticResource TextBlockHeaderStyle}}">
-        </TextBlock>
-
-        <TextBlock x:Name="tblRolesHeader"
-                   Grid.Row="2"
-                   Text="Role"
+                   Text="Add Role"
                    FontSize="16"
-                   Width="80"
-                   Height="25"
-                   Background="LightGray"
-                   Margin="300 10 0 0"
-                   Padding="5 3 0 0"
-                   HorizontalAlignment="Left">
+                   Margin="0 5 0 5">
         </TextBlock>
-
-        <TextBlock x:Name="tblUserName"
-                   Grid.Row="3"
-                   FontSize="12"
-                   Width="150"
-                   Padding="5"
-                   TextWrapping="Wrap"
-                   HorizontalAlignment="Left">
-        </TextBlock>
-
-        <TextBlock x:Name="tblEmail"
-                   Grid.Row="3"
-                   FontSize="12"
-                   Width="150"
-                   Padding="5"
-                   TextWrapping="Wrap"
-                   Margin="150 0 0 0"
-                   HorizontalAlignment="Left">
-        </TextBlock>
-
-        <TextBlock x:Name="tblRoles"
-                   Grid.Row="3"
-                   FontSize="12"
-                   Width="100"
-                   Padding="5"
-                   Margin="300 0 0 0"
-                   TextWrapping="Wrap"
-                   HorizontalAlignment="Left">
-        </TextBlock>
-
-        <Border Grid.Row="4"
-                Margin="0 5 0 10"
-                Width="380"
-                HorizontalAlignment="Left"
-                Style="{StaticResource BorderStyle}"></Border>
-
-        <Border x:Name="bRoles" 
-                        Grid.Row="5"
-                        Width="150"
-                        Height="25"
-                        CornerRadius="3"
-                        BorderThickness="1"
-                        BorderBrush="Black"
-                        Background="White"
-                        Cursor="Hand"
-                        HorizontalAlignment="Left">
-            <ComboBox x:Name="cbRoles"
-                          ToolTip="Choose Service"
-                          FontSize="12"
-                          VerticalAlignment="Center"
-                          Style="{StaticResource ComboBoxStyle}"
-                          BorderBrush="Transparent"
-                          BorderThickness="0">
-            </ComboBox>
-        </Border>
 
         <Button x:Name="btnAddRole"
-                Grid.Row="5"
+                Grid.Row="3"
                 Content="Add"
-                Margin="160 0 0 0"
-                Style="{Binding Source={StaticResource ButtonStyle}}"
+                FontWeight="DemiBold"
+                ToolTip="Add role"
                 HorizontalAlignment="Left"
-                ToolTip="Add role">
-            <Button.CommandParameter>
-                <MultiBinding Converter="{StaticResource MultiValueConverter}">
-                    <Binding ElementName="cbRoles"/>
-                    <Binding ElementName="tblMessage"/>
-                </MultiBinding>
-            </Button.CommandParameter>
+                Style="{StaticResource ButtonStyle}">
         </Button>
 
-        <Button x:Name="btnDeleteRole"
-                Grid.Row="5"
-                Content="Delete"
-                Margin="200 0 0 0"
-                Style="{Binding Source={StaticResource ButtonStyle}}"
-                HorizontalAlignment="Left"
-                ToolTip="Delete role">
-            <Button.CommandParameter>
-                <MultiBinding Converter="{StaticResource MultiValueConverter}">
-                    <Binding ElementName="cbRoles"/>
-                    <Binding ElementName="tblMessage"/>
-                </MultiBinding>
-            </Button.CommandParameter>
-        </Button>
+        <Border Grid.Row="4"
+                Margin="0 5 0 0"
+                        Style="{StaticResource BorderStyle}"></Border>
 
-        <TextBlock x:Name="tblMessage"
+        <TextBlock x:Name="tblRoles"
                    Grid.Row="5"
-                   FontSize="12"
-                   Foreground="Red"
-                   Margin="250 0 0 0"
-                   Padding="0 3 0 0"
-                   HorizontalAlignment="Left">
+                   Text="Roles"
+                   FontSize="20"
+                   Margin="0 5 0 5">
         </TextBlock>
 
-        <Button x:Name="btnBackToUsers"
-                Grid.Row="6"
-                Content="Back"
-                Style="{Binding Source={StaticResource ButtonStyle}}"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Margin="0 10 0 0"
-                ToolTip="To list users">
-        </Button>
+        <StackPanel x:Name="spRoles"
+                   Grid.Row="6"
+                   Margin="0 0 0 0"
+                   Orientation="Vertical">
+        </StackPanel>
+
 
     </Grid>
 </UserControl>
