--- a/MyFlatWPF/View/ManagementWindow.xaml
+++ b/MyFlatWPF/View/ManagementWindow.xaml
@@ -259,14 +259,17 @@
                             </Button>
                         </Border>
                         <Border BorderThickness="0 0 0 0">
-                            <Button x:Name="btnAddRoleToUser"
+                            <Button x:Name="btnAddUser"
                         Content="Add User"
                         Margin="0 10 0 0"
                         Width="140"
                         Style="{StaticResource ButtonExpanderStyle}"
                         HorizontalContentAlignment="Left"
                         MouseEnter="btnExpander_mouseEnter"
-                        MouseLeave="btnExpander_mouseLeave">
+                        MouseLeave="btnExpander_mouseLeave"
+                        Command="{Binding SwitchManagementView, 
+                                  Source={StaticResource ManagementWindowViewModel}}"
+                        CommandParameter="{Binding Name, ElementName=btnAddUser}">
                             </Button>
                         </Border>
                     </StackPanel>
@@ -286,7 +289,10 @@
                         Style="{StaticResource ButtonExpanderStyle}"
                         HorizontalContentAlignment="Left"
                         MouseEnter="btnExpander_mouseEnter"
-                        MouseLeave="btnExpander_mouseLeave">
+                        MouseLeave="btnExpander_mouseLeave"
+                        Command="{Binding SwitchManagementView, 
+                                  Source={StaticResource ManagementWindowViewModel}}"
+                        CommandParameter="{Binding Name, ElementName=btnRoles}">
                             </Button>
                         </Border>
                         <Border BorderThickness="0 0 0 0">
@@ -297,7 +303,10 @@
                         Style="{StaticResource ButtonExpanderStyle}"
                         HorizontalContentAlignment="Left"
                         MouseEnter="btnExpander_mouseEnter"
-                        MouseLeave="btnExpander_mouseLeave">
+                        MouseLeave="btnExpander_mouseLeave"
+                        Command="{Binding SwitchManagementView, 
+                                  Source={StaticResource ManagementWindowViewModel}}"
+                        CommandParameter="{Binding Name, ElementName=btnAddRole}">
                             </Button>
                         </Border>
                     </StackPanel>
