--- a/MyFlatWPF/View/ManagementView/RolesView/AddRoleView.xaml
+++ b/MyFlatWPF/View/ManagementView/RolesView/AddRoleView.xaml
@@ -149,7 +149,7 @@
 
         <TextBox x:Name="tbRoleName"
                    Grid.Row="3"
-                   Width="200"
+                   Width="150"
                    FontSize="12"
                    Margin="0 0 0 0"
                  HorizontalAlignment="Left"
@@ -160,14 +160,14 @@
                Grid.Row="3"
                FontSize="12"
                Foreground="Red"
-               Margin="210 5 0 0">
+               Margin="160 5 0 0">
         </Label>
 
-        <Button x:Name="btnAddUser"
+        <Button x:Name="btnAddRole"
                 Grid.Row="4"
                 Content="Add"
                 FontWeight="DemiBold"
-                ToolTip="Add user"
+                ToolTip="Add role"
                 HorizontalAlignment="Left"
                 Margin="0 10 0 0"
                 Style="{StaticResource ButtonStyle}"
