--- a/MyFlatWPF/View/ManagementView/RolesView/AddRoleView.xaml
+++ b/MyFlatWPF/View/ManagementView/RolesView/AddRoleView.xaml
@@ -120,8 +120,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="0.6*"/>
             <RowDefinition Height="0.3*"/>
-            <RowDefinition Height="0.6*"/>
-            <RowDefinition Height="0.6*"/>
+            <RowDefinition Height="0.4*"/>
+            <RowDefinition Height="0.4*"/>
             <RowDefinition Height="0.6*"/>
             <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
@@ -143,16 +143,18 @@
                    Grid.Row="2"
                    Text="Role name"
                    FontSize="16"
-                   Margin="0 5 0 0"
+                   Margin="0 10 0 0"
                    HorizontalAlignment="Left">
         </TextBlock>
 
         <TextBox x:Name="tbRoleName"
                    Grid.Row="3"
                    Width="150"
+                   Height="20"
                    FontSize="12"
                    Margin="0 0 0 0"
                  HorizontalAlignment="Left"
+                 VerticalAlignment="Bottom"
                    Style="{Binding Source={StaticResource InputTextBox}}">
         </TextBox>
 
@@ -169,6 +171,7 @@
                 FontWeight="DemiBold"
                 ToolTip="Add role"
                 HorizontalAlignment="Left"
+                VerticalAlignment="Top"
                 Margin="0 10 0 0"
                 Style="{StaticResource ButtonStyle}"
                 MouseEnter="Btn_mouseEnter"
